[feature] fixed a few loading errors and also added overflow for the map css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,102 +1,96 @@
 #otis li {
-  list-style-type: none;
+    list-style-type: none;
 }
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  overflow: auto;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-html {
-  overflow: -moz-scrollbars-vertical;
-  overflow-y: scroll;
-}
-
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
 }
 html,
 body {
-  font-family: Arial, sans-serif;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    font-family: Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 .container {
-  height: 100%;
-  position: relative;
-  color: #999999;
-  overflow:scroll;
+    height: 100%;
+    position: relative;
+    color: #999999;
+    overflow: auto;
 }
 h1 {
-  color: #525454;
-  font-size: 22px;
-  margin: 0 0 10px 0;
-  text-align: center;
+    color: #525454;
+    font-size: 22px;
+    margin: 0 0 10px 0;
+    text-align: center;
 }
 h2 {
-  color: aquamarine
+    color: aquamarine
 }
 h4{
-  color: aquamarine;
+    color: aquamarine;
 }
 #hide-listings,
 #show-listings {
-  width: 48%;
+    width: 48%;
 }
 hr {
-  background: #999999;
-  height: 1px;
-  margin: 20px 0 20px 0;
-  border: none;
+    background: #999999;
+    height: 1px;
+    margin: 20px 0 20px 0;
+    border: none;
 }
 #map {
-  height: 100%;
-  position: relative;
-  overflow:scroll;
+    bottom:0px;
+    height: 100%;
+    left: 362px;
+    position: absolute;
+    right: 0px;
+    overflow: auto;
 }
 .options-box {
-  background: #fff;
-  border: 1px solid #999;
-  border-radius: 3px;
-  height: 100%;
-  line-height: 35px;
-  padding: 10px 10px 30px 10px;
-  text-align: left;
-  width: 340px;
+    background: #fff;
+    border: 1px solid #999;
+    border-radius: 3px;
+    height: 100%;
+    line-height: 35px;
+    padding: 10px 10px 30px 10px;
+    text-align: left;
+    width: 340px;
 }
 #pano {
-  width: 200px;
-  height: 200px;
+    width: 200px;
+    height: 200px;
 }
 #search-within-time-text {
-  width: 84%;
+    width: 84%;
 }
 .text {
-  font-size: 12px;
+    font-size: 12px;
 }
 #toggle-drawing {
-  width: 27%;
-  position: relative;
-  margin-left: 10px;
+    width: 27%;
+    position: relative;
+    margin-left: 10px;
 }
 #zoom-to-area-text {
-  width: 70%;
+    width: 70%;
 }
 #zoom-to-area {
-  width: 24%;
+    width: 24%;
 }
 
 #list li:hover {
-  overflow: auto;
-  position: absolute;
-  left: -110px;
-  cursor: pointer;
-  background: linear-gradient(to left, #00B7FF , aquamarine);
-  color: white;
+    cursor: pointer;
+    background: linear-gradient(to left, #00B7FF , aquamarine);
+    color: white;
 }
 
 .no-bullets {
-  list-style-type: none;
+    list-style-type: none;
 }
 
